intTests/test_type_errors/err040.log.good
Loading file "err040.saw"
Type errors:
  err040.saw:8:11-8:26: Error: Type mismatch.
    Expected: Int
    Found:    String

    Expected: (Int, Int, Int)
    Found:    (Int, Int, String)

  err040.saw:7:23-7:26: Note: The type Int arises from this type annotation
  err040.saw:8:18-8:25: Note: The type String arises from the type of this term


FAILED
